# minecraft-server

./: .gitignore  README.md  docker-compose.yml  makefile  minecraft.service
.github/workflows/: ci-cd.yml
api/: Dockerfile  pyproject.toml
api/app/: main.py
api/static/: style.css
api/templates/: dashboard.html
config/: .env-example
scripts/: setup_gcp_wif.sh
server/: Dockerfile  backup_world.sh  entrypoint.sh  inactivity-script.sh  install-minecraft.sh  rcon_api.py
server/sidecar/: inactivity-check.py
server/vm/: Dockerfile  inactivity-check.py
terraform/: README.md  backend.tf  main.tf  outputs.tf  server-startup.sh  terraform.tfvars  variables.tf
